--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.1",
+    "react-scroll-parallax": "^3.5.0",
     "react-share": "^5.2.2",
     "remix-auth": "^4.2.0",
     "remix-auth-github": "^3.0.2",
